# 13_reber

./: .gitignore  README.md  README_SETUP.md  __init__.py  add_test_data.py  config.env  config.env.example  env.example  init_db.py  init_db_sqlite.py  pyproject.toml  requirements.txt  run_bot.py
app/: config.py  dependencies.py  main.py
application/commands/: __init__.py
application/handlers/: __init__.py
application/queries/: __init__.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf
domain/entities/: cart.py  cart_item.py  category.py  menu_item.py  order.py  order_item.py  payment.py  user.py
domain/events/: order_created.py  order_status_changed.py  payment_completed.py  user_registered.py
domain/exceptions/: domain_exception.py  menu_exception.py  order_exception.py  payment_exception.py
domain/repositories/: cart_repository.py  menu_repository.py  order_repository.py  payment_repository.py  user_repository.py
domain/services/: admin_state_service.py  cart_service.py  menu_service.py  notification_service.py  order_service.py  payment_service.py  statistics_service.py  user_service.py
domain/value_objects/: address.py  money.py  order_status.py  phone.py
infrastructure/database/: connection.py
infrastructure/database/models/: __init__.py  cafe_settings_model.py  cart_model.py  category_model.py  menu_item_model.py  order_model.py  payment_model.py  promotion_model.py  user_model.py
infrastructure/database/repositories/: cart_repository_impl.py  menu_repository_impl.py  order_repository_impl.py  payment_repository_impl.py  user_repository_impl.py
infrastructure/events/: notification_event_handlers.py  order_event_handlers.py  payment_event_handlers.py
infrastructure/logging/: logger.py
infrastructure/telegram/: __init__.py  bot.py
infrastructure/telegram/handlers/: __init__.py  admin_handler.py  admin_handler_callbacks.py  admin_handler_extensions.py  admin_management_handlers.py  base_handler.py  cart_handler.py  help_handler.py  menu_handler.py  order_handler.py  payment_handler.py  start_handler.py
infrastructure/telegram/keyboards/: __init__.py  admin_keyboard.py  base_keyboard.py  cart_keyboard.py  main_keyboard.py  menu_keyboard.py
infrastructure/telegram/middlewares/: __init__.py  auth_middleware.py  db_session_middleware.py  error_middleware.py  logging_middleware.py
infrastructure/telegram/utils/: callback_parser.py  message_formatter.py
migrations/: env.py
scripts/: migrate_telegram_id_bigint.py
shared/constants/: bot_constants.py  order_constants.py  payment_constants.py
shared/types/: admin_states.py  order_types.py  payment_types.py  user_types.py
shared/utils/: formatters.py  helpers.py  validators.py
tests/fixtures/: test_data.py
tests/integration/: test_telegram_handlers.py
tests/unit/: test_domain_entities.py  test_domain_services.py  test_domain_value_objects.py
